# pyperclip

./: pyproject.toml
src/: pyperclip.py
